<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsActivity">

    <Switch
        android:id="@+id/darkMode"
        android:layout_width="361dp"
        android:layout_height="13dp"
        android:text="@string/mode_sombre"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.144"
        tools:ignore="TouchTargetSizeCheck,UseSwitchCompatOrMaterialXml,TextSizeCheck,VisualLintButtonSize" />

    <Switch
        android:id="@+id/bluetooth"
        android:layout_width="361dp"
        android:layout_height="48dp"
        android:text="@string/bluetooth"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.247"
        tools:ignore="UseSwitchCompatOrMaterialXml,VisualLintButtonSize" />

    <TextView
        android:id="@+id/tittleSettings"
        android:layout_width="148dp"
        android:layout_height="56dp"
        android:fontFamily="monospace"
        android:text="@string/r_glages"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/textDarkMode"
        android:layout_width="359dp"
        android:layout_height="29dp"
        android:fontFamily="sans-serif"
        android:text="@string/utiliser_le_mode_sombre_pour_une_meilleur_immersion"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.182"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textBluetooth"
        android:layout_width="361dp"
        android:layout_height="47dp"
        android:fontFamily="sans-serif"
        android:text="@string/activ_le_bluetooth_pour_avoir_acc_s_a_certaines_fonctionnalit_es"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.293"
        tools:ignore="TextSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>